Readability CSS fixes for overhead/presenter.

--- a/client/src/css/Answer.css
+++ b/client/src/css/Answer.css
@@ -30,3 +30,9 @@
     margin: 0;
     margin-bottom: 0.5em;
 }
+
+.answer .overhead p, .answer p.overhead {
+    font-size: 18pt;
+    padding: 0.5em;
+    margin: 0;
+}
